qt6/gen_qlocale.h

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
QLocale* QLocale_new();
QLocale* QLocale_new2(struct miqt_string name);
QLocale* QLocale_new3(uint16_t language, uint16_t territory);
QLocale* QLocale_new4(uint16_t language);
QLocale* QLocale_new5(QLocale* other);
QLocale* QLocale_new6(uint16_t language, uint16_t script);
QLocale* QLocale_new7(uint16_t language, uint16_t script, uint16_t territory);
void QLocale_operatorAssign(QLocale* self, QLocale* other);
void QLocale_swap(QLocale* self, QLocale* other);
uint16_t QLocale_language(const QLocale* self);
uint16_t QLocale_script(const QLocale* self);
uint16_t QLocale_territory(const QLocale* self);
uint16_t QLocale_country(const QLocale* self);
struct miqt_string QLocale_name(const QLocale* self);
struct miqt_string QLocale_bcp47Name(const QLocale* self);
struct miqt_string QLocale_nativeLanguageName(const QLocale* self);
struct miqt_string QLocale_nativeTerritoryName(const QLocale* self);
struct miqt_string QLocale_nativeCountryName(const QLocale* self);
int16_t QLocale_toShort(const QLocale* self, struct miqt_string s);
uint16_t QLocale_toUShort(const QLocale* self, struct miqt_string s);
int QLocale_toInt(const QLocale* self, struct miqt_string s);
unsigned int QLocale_toUInt(const QLocale* self, struct miqt_string s);
long QLocale_toLong(const QLocale* self, struct miqt_string s);
unsigned long QLocale_toULong(const QLocale* self, struct miqt_string s);
long long QLocale_toLongLong(const QLocale* self, struct miqt_string s);
unsigned long long QLocale_toULongLong(const QLocale* self, struct miqt_string s);
float QLocale_toFloat(const QLocale* self, struct miqt_string s);
double QLocale_toDouble(const QLocale* self, struct miqt_string s);
struct miqt_string QLocale_toString(const QLocale* self, long long i);
struct miqt_string QLocale_toStringWithQulonglong(const QLocale* self, unsigned long long i);
struct miqt_string QLocale_toStringWithLong(const QLocale* self, long i);
struct miqt_string QLocale_toStringWithUlong(const QLocale* self, unsigned long i);
struct miqt_string QLocale_toStringWithShort(const QLocale* self, int16_t i);
struct miqt_string QLocale_toStringWithUshort(const QLocale* self, uint16_t i);
struct miqt_string QLocale_toStringWithInt(const QLocale* self, int i);
struct miqt_string QLocale_toStringWithUint(const QLocale* self, unsigned int i);
struct miqt_string QLocale_toStringWithDouble(const QLocale* self, double f);
struct miqt_string QLocale_toStringWithFloat(const QLocale* self, float f);
struct miqt_string QLocale_toString2(const QLocale* self, QDate* date, struct miqt_string format);
struct miqt_string QLocale_toString3(const QLocale* self, QTime* time, struct miqt_string format);
struct miqt_string QLocale_toString4(const QLocale* self, QDateTime* dateTime, struct miqt_string format);
struct miqt_string QLocale_toStringWithDate(const QLocale* self, QDate* date);
struct miqt_string QLocale_toStringWithTime(const QLocale* self, QTime* time);
struct miqt_string QLocale_toStringWithDateTime(const QLocale* self, QDateTime* dateTime);
struct miqt_string QLocale_toString9(const QLocale* self, QDate* date, int format, QCalendar* cal);
struct miqt_string QLocale_toString10(const QLocale* self, QDateTime* dateTime, int format, QCalendar* cal);
struct miqt_string QLocale_dateFormat(const QLocale* self);
struct miqt_string QLocale_timeFormat(const QLocale* self);
struct miqt_string QLocale_dateTimeFormat(const QLocale* self);
QDate* QLocale_toDate(const QLocale* self, struct miqt_string string);
QTime* QLocale_toTime(const QLocale* self, struct miqt_string string);
QDateTime* QLocale_toDateTime(const QLocale* self, struct miqt_string string);
QDate* QLocale_toDate2(const QLocale* self, struct miqt_string string, struct miqt_string format);
QTime* QLocale_toTime2(const QLocale* self, struct miqt_string string, struct miqt_string format);
QDateTime* QLocale_toDateTime2(const QLocale* self, struct miqt_string string, struct miqt_string format);
QDate* QLocale_toDate3(const QLocale* self, struct miqt_string string, int format, QCalendar* cal);
QDateTime* QLocale_toDateTime3(const QLocale* self, struct miqt_string string, int format, QCalendar* cal);
QDate* QLocale_toDate4(const QLocale* self, struct miqt_string string, struct miqt_string format, QCalendar* cal);
QDateTime* QLocale_toDateTime4(const QLocale* self, struct miqt_string string, struct miqt_string format, QCalendar* cal);
struct miqt_string QLocale_decimalPoint(const QLocale* self);
struct miqt_string QLocale_groupSeparator(const QLocale* self);
struct miqt_string QLocale_percent(const QLocale* self);
struct miqt_string QLocale_zeroDigit(const QLocale* self);
struct miqt_string QLocale_negativeSign(const QLocale* self);
struct miqt_string QLocale_positiveSign(const QLocale* self);
struct miqt_string QLocale_exponential(const QLocale* self);
struct miqt_string QLocale_monthName(const QLocale* self, int param1);
struct miqt_string QLocale_standaloneMonthName(const QLocale* self, int param1);
struct miqt_string QLocale_dayName(const QLocale* self, int param1);
struct miqt_string QLocale_standaloneDayName(const QLocale* self, int param1);
int QLocale_firstDayOfWeek(const QLocale* self);
struct miqt_array /* of int */  QLocale_weekdays(const QLocale* self);
struct miqt_string QLocale_amText(const QLocale* self);
struct miqt_string QLocale_pmText(const QLocale* self);
int QLocale_measurementSystem(const QLocale* self);
QLocale* QLocale_collation(const QLocale* self);
int QLocale_textDirection(const QLocale* self);
struct miqt_string QLocale_toUpper(const QLocale* self, struct miqt_string str);
struct miqt_string QLocale_toLower(const QLocale* self, struct miqt_string str);
struct miqt_string QLocale_currencySymbol(const QLocale* self);
struct miqt_string QLocale_toCurrencyString(const QLocale* self, long long param1);
struct miqt_string QLocale_toCurrencyStringWithQulonglong(const QLocale* self, unsigned long long param1);
struct miqt_string QLocale_toCurrencyStringWithShort(const QLocale* self, int16_t i);
struct miqt_string QLocale_toCurrencyStringWithUshort(const QLocale* self, uint16_t i);
struct miqt_string QLocale_toCurrencyStringWithInt(const QLocale* self, int i);
struct miqt_string QLocale_toCurrencyStringWithUint(const QLocale* self, unsigned int i);
struct miqt_string QLocale_toCurrencyStringWithDouble(const QLocale* self, double param1);
struct miqt_string QLocale_toCurrencyStringWithFloat(const QLocale* self, float i);
struct miqt_string QLocale_formattedDataSize(const QLocale* self, long long bytes);
struct miqt_array /* of struct miqt_string */  QLocale_uiLanguages(const QLocale* self);
struct miqt_string QLocale_languageToCode(uint16_t language);
struct miqt_string QLocale_territoryToCode(uint16_t territory);
struct miqt_string QLocale_countryToCode(uint16_t country);
struct miqt_string QLocale_scriptToCode(uint16_t script);
struct miqt_string QLocale_languageToString(uint16_t language);
struct miqt_string QLocale_territoryToString(uint16_t territory);
struct miqt_string QLocale_countryToString(uint16_t country);
struct miqt_string QLocale_scriptToString(uint16_t script);
void QLocale_setDefault(QLocale* locale);
QLocale* QLocale_c();
QLocale* QLocale_system();
struct miqt_array /* of QLocale* */  QLocale_matchingLocales(uint16_t language, uint16_t script, uint16_t territory);
struct miqt_array /* of uint16_t */  QLocale_countriesForLanguage(uint16_t lang);
void QLocale_setNumberOptions(QLocale* self, int options);
int QLocale_numberOptions(const QLocale* self);
struct miqt_string QLocale_quoteString(const QLocale* self, struct miqt_string str);
struct miqt_string QLocale_createSeparatedList(const QLocale* self, struct miqt_array /* of struct miqt_string */  strl);
int16_t QLocale_toShort2(const QLocale* self, struct miqt_string s, bool* ok);
uint16_t QLocale_toUShort2(const QLocale* self, struct miqt_string s, bool* ok);