qt6/gen_qlocale.nim


proc fcQLocale_new(): ptr cQLocale {.importc: "QLocale_new".}
proc fcQLocale_new2(name: struct_miqt_string): ptr cQLocale {.importc: "QLocale_new2".}
proc fcQLocale_new3(language: cint, territory: cint): ptr cQLocale {.importc: "QLocale_new3".}
proc fcQLocale_new4(language: cint): ptr cQLocale {.importc: "QLocale_new4".}
proc fcQLocale_new5(other: pointer): ptr cQLocale {.importc: "QLocale_new5".}
proc fcQLocale_new6(language: cint, script: cint): ptr cQLocale {.importc: "QLocale_new6".}
proc fcQLocale_new7(language: cint, script: cint, territory: cint): ptr cQLocale {.importc: "QLocale_new7".}
proc fcQLocale_operatorAssign(self: pointer, other: pointer): void {.importc: "QLocale_operatorAssign".}
proc fcQLocale_swap(self: pointer, other: pointer): void {.importc: "QLocale_swap".}
proc fcQLocale_language(self: pointer, ): cint {.importc: "QLocale_language".}
proc fcQLocale_script(self: pointer, ): cint {.importc: "QLocale_script".}
proc fcQLocale_territory(self: pointer, ): cint {.importc: "QLocale_territory".}
proc fcQLocale_country(self: pointer, ): cint {.importc: "QLocale_country".}
proc fcQLocale_name(self: pointer, ): struct_miqt_string {.importc: "QLocale_name".}
proc fcQLocale_bcp47Name(self: pointer, ): struct_miqt_string {.importc: "QLocale_bcp47Name".}
proc fcQLocale_nativeLanguageName(self: pointer, ): struct_miqt_string {.importc: "QLocale_nativeLanguageName".}
proc fcQLocale_nativeTerritoryName(self: pointer, ): struct_miqt_string {.importc: "QLocale_nativeTerritoryName".}
proc fcQLocale_nativeCountryName(self: pointer, ): struct_miqt_string {.importc: "QLocale_nativeCountryName".}
proc fcQLocale_toShort(self: pointer, s: struct_miqt_string): cshort {.importc: "QLocale_toShort".}
proc fcQLocale_toUShort(self: pointer, s: struct_miqt_string): cushort {.importc: "QLocale_toUShort".}
proc fcQLocale_toInt(self: pointer, s: struct_miqt_string): cint {.importc: "QLocale_toInt".}
proc fcQLocale_toUInt(self: pointer, s: struct_miqt_string): cuint {.importc: "QLocale_toUInt".}
proc fcQLocale_toLong(self: pointer, s: struct_miqt_string): clong {.importc: "QLocale_toLong".}
proc fcQLocale_toULong(self: pointer, s: struct_miqt_string): culong {.importc: "QLocale_toULong".}
proc fcQLocale_toLongLong(self: pointer, s: struct_miqt_string): clonglong {.importc: "QLocale_toLongLong".}
proc fcQLocale_toULongLong(self: pointer, s: struct_miqt_string): culonglong {.importc: "QLocale_toULongLong".}
proc fcQLocale_toFloat(self: pointer, s: struct_miqt_string): float32 {.importc: "QLocale_toFloat".}
proc fcQLocale_toDouble(self: pointer, s: struct_miqt_string): float64 {.importc: "QLocale_toDouble".}
proc fcQLocale_toString(self: pointer, i: clonglong): struct_miqt_string {.importc: "QLocale_toString".}
proc fcQLocale_toStringWithQulonglong(self: pointer, i: culonglong): struct_miqt_string {.importc: "QLocale_toStringWithQulonglong".}
proc fcQLocale_toStringWithLong(self: pointer, i: clong): struct_miqt_string {.importc: "QLocale_toStringWithLong".}
proc fcQLocale_toStringWithUlong(self: pointer, i: culong): struct_miqt_string {.importc: "QLocale_toStringWithUlong".}
proc fcQLocale_toStringWithShort(self: pointer, i: cshort): struct_miqt_string {.importc: "QLocale_toStringWithShort".}
proc fcQLocale_toStringWithUshort(self: pointer, i: cushort): struct_miqt_string {.importc: "QLocale_toStringWithUshort".}
proc fcQLocale_toStringWithInt(self: pointer, i: cint): struct_miqt_string {.importc: "QLocale_toStringWithInt".}
proc fcQLocale_toStringWithUint(self: pointer, i: cuint): struct_miqt_string {.importc: "QLocale_toStringWithUint".}
proc fcQLocale_toStringWithDouble(self: pointer, f: float64): struct_miqt_string {.importc: "QLocale_toStringWithDouble".}
proc fcQLocale_toStringWithFloat(self: pointer, f: float32): struct_miqt_string {.importc: "QLocale_toStringWithFloat".}
proc fcQLocale_toString2(self: pointer, date: pointer, format: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toString2".}
proc fcQLocale_toString3(self: pointer, time: pointer, format: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toString3".}
proc fcQLocale_toString4(self: pointer, dateTime: pointer, format: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toString4".}
proc fcQLocale_toStringWithDate(self: pointer, date: pointer): struct_miqt_string {.importc: "QLocale_toStringWithDate".}
proc fcQLocale_toStringWithTime(self: pointer, time: pointer): struct_miqt_string {.importc: "QLocale_toStringWithTime".}
proc fcQLocale_toStringWithDateTime(self: pointer, dateTime: pointer): struct_miqt_string {.importc: "QLocale_toStringWithDateTime".}
proc fcQLocale_toString9(self: pointer, date: pointer, format: cint, cal: pointer): struct_miqt_string {.importc: "QLocale_toString9".}
proc fcQLocale_toString10(self: pointer, dateTime: pointer, format: cint, cal: pointer): struct_miqt_string {.importc: "QLocale_toString10".}
proc fcQLocale_dateFormat(self: pointer, ): struct_miqt_string {.importc: "QLocale_dateFormat".}
proc fcQLocale_timeFormat(self: pointer, ): struct_miqt_string {.importc: "QLocale_timeFormat".}
proc fcQLocale_dateTimeFormat(self: pointer, ): struct_miqt_string {.importc: "QLocale_dateTimeFormat".}
proc fcQLocale_toDate(self: pointer, string: struct_miqt_string): pointer {.importc: "QLocale_toDate".}
proc fcQLocale_toTime(self: pointer, string: struct_miqt_string): pointer {.importc: "QLocale_toTime".}
proc fcQLocale_toDateTime(self: pointer, string: struct_miqt_string): pointer {.importc: "QLocale_toDateTime".}
proc fcQLocale_toDate2(self: pointer, string: struct_miqt_string, format: struct_miqt_string): pointer {.importc: "QLocale_toDate2".}
proc fcQLocale_toTime2(self: pointer, string: struct_miqt_string, format: struct_miqt_string): pointer {.importc: "QLocale_toTime2".}
proc fcQLocale_toDateTime2(self: pointer, string: struct_miqt_string, format: struct_miqt_string): pointer {.importc: "QLocale_toDateTime2".}
proc fcQLocale_toDate3(self: pointer, string: struct_miqt_string, format: cint, cal: pointer): pointer {.importc: "QLocale_toDate3".}
proc fcQLocale_toDateTime3(self: pointer, string: struct_miqt_string, format: cint, cal: pointer): pointer {.importc: "QLocale_toDateTime3".}
proc fcQLocale_toDate4(self: pointer, string: struct_miqt_string, format: struct_miqt_string, cal: pointer): pointer {.importc: "QLocale_toDate4".}
proc fcQLocale_toDateTime4(self: pointer, string: struct_miqt_string, format: struct_miqt_string, cal: pointer): pointer {.importc: "QLocale_toDateTime4".}
proc fcQLocale_decimalPoint(self: pointer, ): struct_miqt_string {.importc: "QLocale_decimalPoint".}
proc fcQLocale_groupSeparator(self: pointer, ): struct_miqt_string {.importc: "QLocale_groupSeparator".}
proc fcQLocale_percent(self: pointer, ): struct_miqt_string {.importc: "QLocale_percent".}
proc fcQLocale_zeroDigit(self: pointer, ): struct_miqt_string {.importc: "QLocale_zeroDigit".}
proc fcQLocale_negativeSign(self: pointer, ): struct_miqt_string {.importc: "QLocale_negativeSign".}
proc fcQLocale_positiveSign(self: pointer, ): struct_miqt_string {.importc: "QLocale_positiveSign".}
proc fcQLocale_exponential(self: pointer, ): struct_miqt_string {.importc: "QLocale_exponential".}
proc fcQLocale_monthName(self: pointer, param1: cint): struct_miqt_string {.importc: "QLocale_monthName".}
proc fcQLocale_standaloneMonthName(self: pointer, param1: cint): struct_miqt_string {.importc: "QLocale_standaloneMonthName".}
proc fcQLocale_dayName(self: pointer, param1: cint): struct_miqt_string {.importc: "QLocale_dayName".}
proc fcQLocale_standaloneDayName(self: pointer, param1: cint): struct_miqt_string {.importc: "QLocale_standaloneDayName".}
proc fcQLocale_firstDayOfWeek(self: pointer, ): cint {.importc: "QLocale_firstDayOfWeek".}
proc fcQLocale_weekdays(self: pointer, ): struct_miqt_array {.importc: "QLocale_weekdays".}
proc fcQLocale_amText(self: pointer, ): struct_miqt_string {.importc: "QLocale_amText".}
proc fcQLocale_pmText(self: pointer, ): struct_miqt_string {.importc: "QLocale_pmText".}
proc fcQLocale_measurementSystem(self: pointer, ): cint {.importc: "QLocale_measurementSystem".}
proc fcQLocale_collation(self: pointer, ): pointer {.importc: "QLocale_collation".}
proc fcQLocale_textDirection(self: pointer, ): cint {.importc: "QLocale_textDirection".}
proc fcQLocale_toUpper(self: pointer, str: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toUpper".}
proc fcQLocale_toLower(self: pointer, str: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toLower".}
proc fcQLocale_currencySymbol(self: pointer, ): struct_miqt_string {.importc: "QLocale_currencySymbol".}
proc fcQLocale_toCurrencyString(self: pointer, param1: clonglong): struct_miqt_string {.importc: "QLocale_toCurrencyString".}
proc fcQLocale_toCurrencyStringWithQulonglong(self: pointer, param1: culonglong): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithQulonglong".}
proc fcQLocale_toCurrencyStringWithShort(self: pointer, i: cshort): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithShort".}
proc fcQLocale_toCurrencyStringWithUshort(self: pointer, i: cushort): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithUshort".}
proc fcQLocale_toCurrencyStringWithInt(self: pointer, i: cint): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithInt".}
proc fcQLocale_toCurrencyStringWithUint(self: pointer, i: cuint): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithUint".}
proc fcQLocale_toCurrencyStringWithDouble(self: pointer, param1: float64): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithDouble".}
proc fcQLocale_toCurrencyStringWithFloat(self: pointer, i: float32): struct_miqt_string {.importc: "QLocale_toCurrencyStringWithFloat".}
proc fcQLocale_formattedDataSize(self: pointer, bytes: clonglong): struct_miqt_string {.importc: "QLocale_formattedDataSize".}
proc fcQLocale_uiLanguages(self: pointer, ): struct_miqt_array {.importc: "QLocale_uiLanguages".}
proc fcQLocale_languageToCode(language: cint): struct_miqt_string {.importc: "QLocale_languageToCode".}
proc fcQLocale_territoryToCode(territory: cint): struct_miqt_string {.importc: "QLocale_territoryToCode".}
proc fcQLocale_countryToCode(country: cint): struct_miqt_string {.importc: "QLocale_countryToCode".}
proc fcQLocale_scriptToCode(script: cint): struct_miqt_string {.importc: "QLocale_scriptToCode".}
proc fcQLocale_languageToString(language: cint): struct_miqt_string {.importc: "QLocale_languageToString".}
proc fcQLocale_territoryToString(territory: cint): struct_miqt_string {.importc: "QLocale_territoryToString".}
proc fcQLocale_countryToString(country: cint): struct_miqt_string {.importc: "QLocale_countryToString".}
proc fcQLocale_scriptToString(script: cint): struct_miqt_string {.importc: "QLocale_scriptToString".}
proc fcQLocale_setDefault(locale: pointer): void {.importc: "QLocale_setDefault".}
proc fcQLocale_c(): pointer {.importc: "QLocale_c".}
proc fcQLocale_system(): pointer {.importc: "QLocale_system".}
proc fcQLocale_matchingLocales(language: cint, script: cint, territory: cint): struct_miqt_array {.importc: "QLocale_matchingLocales".}
proc fcQLocale_countriesForLanguage(lang: cint): struct_miqt_array {.importc: "QLocale_countriesForLanguage".}
proc fcQLocale_setNumberOptions(self: pointer, options: cint): void {.importc: "QLocale_setNumberOptions".}
proc fcQLocale_numberOptions(self: pointer, ): cint {.importc: "QLocale_numberOptions".}
proc fcQLocale_quoteString(self: pointer, str: struct_miqt_string): struct_miqt_string {.importc: "QLocale_quoteString".}
proc fcQLocale_createSeparatedList(self: pointer, strl: struct_miqt_array): struct_miqt_string {.importc: "QLocale_createSeparatedList".}
proc fcQLocale_toShort2(self: pointer, s: struct_miqt_string, ok: ptr bool): cshort {.importc: "QLocale_toShort2".}
proc fcQLocale_toUShort2(self: pointer, s: struct_miqt_string, ok: ptr bool): cushort {.importc: "QLocale_toUShort2".}
